[package]
name = "ext_driver"
version = "0.1.0"
authors = [
  "ArtemGr <artemciy@gmail.com>"
]
edition = "2018"

[profile.dev]
debug = true
opt-level = 1

# cf. https://doc.rust-lang.org/cargo/reference/profiles.html#overrides
[profile.dev.package."*"]
debug = false
opt-level = 3

[[bin]]
name = "ext_driver"
path = "ext_driver.rs"
test = false
doctest = false

[dependencies]
chrono = "0.4"
fomat-macros = "0.3"
gstuff = {version = "0.7", features = ["nightly", "crossterm"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_yaml = "0.8"
serde_derive = "1"
smallvec = "1"
