[package]
name = "nn"
version = "0.1.0"
authors = [
  "Artemciy <artemciy@gmail.com>"
]
edition = "2021"

[profile.dev]
# Debug information turned off in order to speed up the rust-analyzer loop,
# https://github.com/rust-analyzer/rust-analyzer/issues/1987
debug = false

[profile.dev.package."*"]
debug = false
# Might speed up the tests and reduce the size of the “dev” builds
opt-level = 2

[profile.release]
lto = false

[[bin]]
name = "nn"
path = "src/nn.rs"
doctest = false
bench = false
doc = false

[dependencies]
async-std = {version = "1", features = ["tokio1"]}
attohttpc = {version = "0.18", default-features = false, features = ["json", "tls-rustls"]}
  http = "*"
arrayfire = {version = "3", features = ["afserde"]}
chrono = "0.4"
crossterm = "0.22"
fomat-macros = "0.3"
gstuff = {version = "0.7", features = ["nightly", "crossterm", "rdtsc", "re"]}
gcp-bigquery-client = "0.10"
  tokio = "*"
indexmap = {version = "1", features = ["serde-1"]}
inlinable_string = {version = "0.1", features = ["serde"]}
ndarray-linalg = {version = "0.14", features = ["intel-mkl-static"]}
  ndarray = "*"
once_cell = {version = "1", features = ["parking_lot"]}
parking_lot = {version = "0.11", features = ["nightly"]}
pico-args = "0.4"
radiate = {version = "1", features = ["small-ids"]}
rand = {version = "0.8", features = ["small_rng"]}
regex = "1"

serde = {version = "1", features = ["rc"]}
serde_derive = "1"
# preserve_order switches to IndexMap
serde_json = {version = "1", features = ["preserve_order", "raw_value"]}

smallvec = {version = "1.4", features = ["serde", "const_generics", "union", "write"]}
